[package]
name = "orml-currencies"
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false , tag = 'monthly-2021-07'}
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false , tag = 'monthly-2021-07'}
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false , tag = 'monthly-2021-07'}

frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false , tag = 'monthly-2021-07'}
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false , tag = 'monthly-2021-07'}

orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }
orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate" , tag = 'monthly-2021-07'}
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate" , tag = 'monthly-2021-07'}
orml_tokens = { package = "orml-tokens", path = "../tokens", version = "0.4.1-dev" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
]
