[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, tag = 'monthly-2021-07' }
sp-std = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, tag = 'monthly-2021-07' }
frame-support = {  git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false , tag = 'monthly-2021-07'}
frame-system = {  git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false , tag = 'monthly-2021-07'}
orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", version = "3.0.0" , tag = 'monthly-2021-07'}
sp-core = { git = "https://github.com/paritytech/substrate", version = "3.0.0" , tag = 'monthly-2021-07'}
pallet-treasury = { git = "https://github.com/paritytech/substrate", version = "3.0.0" , tag = 'monthly-2021-07'}
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate" , tag = 'monthly-2021-07'}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
